fix overflow-1

--- a/styles.css
+++ b/styles.css
@@ -933,9 +933,7 @@ footer {
         width: 90%;
     }
 
-    .logo-button img {
-        width: 80%;
-    }
+
 
     .tesla img {
         width: 50%;
@@ -943,6 +941,10 @@ footer {
 
     .privacy img {
         width: 50%;
+    }
+
+    .logo-button img {
+        width: 80% !important;
     }
 }
 
